--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 alembic==1.4.2
+certifi==2020.6.20
 click==7.1.1
+elasticsearch==7.8.0
 Flask==1.1.2
 Flask-Login==0.5.0
 Flask-Migrate==2.5.3
@@ -14,5 +16,6 @@ python-dotenv==0.12.0
 python-editor==1.0.4
 six==1.14.0
 SQLAlchemy==1.3.16
+urllib3==1.25.9
 Werkzeug==1.0.1
 WTForms==2.2.1
